.kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: serving-cake-deployment
  namespace: default
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serving-cake
  template:
    metadata:
      labels:
        app: serving-cake
    spec:
      containers:
        - name: serving-cake
          image: adernild/serving-cake:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
