.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: serving-cake-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: serving-cake
