.kube/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: serving-cake-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cake.dernild.dev`) # Adjust domain as needed
      kind: Rule
      services:
        - name: serving-cake-service
          port: 80
  tls:
    certResolver: letsencrypt
